Update Class Item